sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: not found: value i
      i=0;
      ^AlgCombSort:9: error: not found: value i
    while (i+ecart < getValueCount()){
           ^AlgCombSort:10: error: not found: value ismaller
      if (ismaller(i,i+1)){
          ^AlgCombSort:10: error: not found: value i
      if (ismaller(i,i+1)){
                   ^AlgCombSort:10: error: not found: value i
      if (ismaller(i,i+1)){
                     ^AlgCombSort:11: error: not found: value i
        i=i+1;
        ^AlgCombSort:12: error: not found: value inverse
        inverse=true;
        ^AlgCombSort:13: error: not found: value i
        swap(i,i+ecart);
             ^AlgCombSort:13: error: not found: value i
        swap(i,i+ecart);
               ^AlgCombSort:17: error: not found: value inverse
		while (ecart>1||inverse)
                                ^