sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart=getValueCount();
  do{
    if (ecart>1){
      ecart=(ecart.toDouble/1.3).toInt;
      i=0;
    }
    while (i+ecart < getValueCount()){
      if (ismaller(i,i+1)){
        i=i+1;
        inverse=true;
        swap(i,i+ecart);
      }
    }
  }
		while (ecart>1||inverse)
}